--- a/android.html
+++ b/android.html
@@ -17,7 +17,8 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Contato</a>
+        <a href="#">Curiosidades</a>
+        <a href="#">Fale conosco</a>
     </nav>
     <main>
         <article>
