--- a/android.html
+++ b/android.html
@@ -118,7 +118,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/rogercluts" target="_blank">Junior</a> para o <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">Curso em Video</a></p>
+        <p>Site criado por <a href="https://github.com/rogercluts" target="_blank">Junior</a>
     </footer>
 </body>
 </html>
